# fal-rs

./: .gitignore  Cargo.toml  README.md
fal/: Cargo.toml
fal/src/: endpoints.rs  image.rs  lib.rs  queue.rs  request.rs
fal/src/endpoints/: mod.rs  types.rs
fal/src/endpoints/fal_ai/: mod.rs
fal/src/endpoints/fal_ai/amt_interpolation/: mod.rs
fal/src/endpoints/fal_ai/animatediff_sparsectrl_lcm/: mod.rs
fal/src/endpoints/fal_ai/animatediff_v2v/: mod.rs
fal/src/endpoints/fal_ai/any_llm/: mod.rs
fal/src/endpoints/fal_ai/aura_flow/: mod.rs
fal/src/endpoints/fal_ai/aura_sr/: mod.rs
fal/src/endpoints/fal_ai/auto_caption/: mod.rs
fal/src/endpoints/fal_ai/birefnet/: mod.rs
fal/src/endpoints/fal_ai/cat_vton/: mod.rs
fal/src/endpoints/fal_ai/ccsr/: mod.rs
fal/src/endpoints/fal_ai/clarity_upscaler/: mod.rs
fal/src/endpoints/fal_ai/codeformer/: mod.rs
fal/src/endpoints/fal_ai/cogvideox_5b/: mod.rs
fal/src/endpoints/fal_ai/cogview4/: mod.rs
fal/src/endpoints/fal_ai/controlnext/: mod.rs
fal/src/endpoints/fal_ai/creative_upscaler/: mod.rs
fal/src/endpoints/fal_ai/ddcolor/: mod.rs
fal/src/endpoints/fal_ai/diffrhythm/: mod.rs
fal/src/endpoints/fal_ai/diffusion_edge/: mod.rs
fal/src/endpoints/fal_ai/docres/: mod.rs
fal/src/endpoints/fal_ai/drct_super_resolution/: mod.rs
fal/src/endpoints/fal_ai/dreamshaper/: mod.rs
fal/src/endpoints/fal_ai/dubbing/: mod.rs
fal/src/endpoints/fal_ai/dwpose/: mod.rs
fal/src/endpoints/fal_ai/elevenlabs/: mod.rs
fal/src/endpoints/fal_ai/era_3d/: mod.rs
fal/src/endpoints/fal_ai/esrgan/: mod.rs
fal/src/endpoints/fal_ai/evf_sam/: mod.rs
fal/src/endpoints/fal_ai/eye_correct/: mod.rs
fal/src/endpoints/fal_ai/f5_tts/: mod.rs
fal/src/endpoints/fal_ai/face_to_sticker/: mod.rs
fal/src/endpoints/fal_ai/fast_fooocus_sdxl/: mod.rs
fal/src/endpoints/fal_ai/fast_lcm_diffusion/: mod.rs
fal/src/endpoints/fal_ai/fast_lightning_sdxl/: mod.rs
fal/src/endpoints/fal_ai/fast_sdxl/: mod.rs
fal/src/endpoints/fal_ai/fast_sdxl_controlnet_canny/: mod.rs
fal/src/endpoints/fal_ai/fast_svd/: mod.rs
fal/src/endpoints/fal_ai/fast_svd_lcm/: mod.rs
fal/src/endpoints/fal_ai/fast_turbo_diffusion/: mod.rs
fal/src/endpoints/fal_ai/flowedit/: mod.rs
fal/src/endpoints/fal_ai/flux/: mod.rs
fal/src/endpoints/fal_ai/flux_control_lora_canny/: mod.rs
fal/src/endpoints/fal_ai/flux_control_lora_depth/: mod.rs
fal/src/endpoints/fal_ai/flux_differential_diffusion/: mod.rs
fal/src/endpoints/fal_ai/flux_general/: mod.rs
fal/src/endpoints/fal_ai/flux_lora/: mod.rs
fal/src/endpoints/fal_ai/flux_lora_canny/: mod.rs
fal/src/endpoints/fal_ai/flux_lora_depth/: mod.rs
fal/src/endpoints/fal_ai/flux_lora_fast_training/: mod.rs
fal/src/endpoints/fal_ai/flux_lora_fill/: mod.rs
fal/src/endpoints/fal_ai/flux_lora_portrait_trainer/: mod.rs
fal/src/endpoints/fal_ai/flux_pro/: mod.rs
fal/src/endpoints/fal_ai/flux_pro_trainer/: mod.rs
fal/src/endpoints/fal_ai/flux_pulid/: mod.rs
fal/src/endpoints/fal_ai/flux_subject/: mod.rs
fal/src/endpoints/fal_ai/fooocus/: mod.rs
fal/src/endpoints/fal_ai/hunyuan_video/: mod.rs
fal/src/endpoints/fal_ai/hunyuan_video_image_to_video/: mod.rs
fal/src/endpoints/fal_ai/hunyuan_video_img2vid_lora/: mod.rs
fal/src/endpoints/fal_ai/hunyuan_video_lora/: mod.rs
fal/src/endpoints/fal_ai/hunyuan_video_lora_training/: mod.rs
fal/src/endpoints/fal_ai/hyper3d/: mod.rs
fal/src/endpoints/fal_ai/hyper_sdxl/: mod.rs
fal/src/endpoints/fal_ai/iclight_v2/: mod.rs
fal/src/endpoints/fal_ai/ideogram/: mod.rs
fal/src/endpoints/fal_ai/illusion_diffusion/: mod.rs
fal/src/endpoints/fal_ai/imagen3/: mod.rs
fal/src/endpoints/fal_ai/imageutils/: mod.rs
fal/src/endpoints/fal_ai/inpaint/: mod.rs
fal/src/endpoints/fal_ai/ip_adapter_face_id/: mod.rs
fal/src/endpoints/fal_ai/janus/: mod.rs
fal/src/endpoints/fal_ai/kling/: mod.rs
fal/src/endpoints/fal_ai/kling_video/: mod.rs
fal/src/endpoints/fal_ai/kokoro/: mod.rs
fal/src/endpoints/fal_ai/kolors/: mod.rs
fal/src/endpoints/fal_ai/latentsync/: mod.rs
fal/src/endpoints/fal_ai/layer_diffusion/: mod.rs
fal/src/endpoints/fal_ai/lcm/: mod.rs
fal/src/endpoints/fal_ai/lcm_sd15_i2i/: mod.rs
fal/src/endpoints/fal_ai/lightning_models/: mod.rs
fal/src/endpoints/fal_ai/live_portrait/: mod.rs
fal/src/endpoints/fal_ai/llava_next/: mod.rs
fal/src/endpoints/fal_ai/llavav15_13b/: mod.rs
fal/src/endpoints/fal_ai/lora/: mod.rs
fal/src/endpoints/fal_ai/ltx_video/: mod.rs
fal/src/endpoints/fal_ai/ltx_video_v095/: mod.rs
fal/src/endpoints/fal_ai/luma_dream_machine/: mod.rs
fal/src/endpoints/fal_ai/luma_photon/: mod.rs
fal/src/endpoints/fal_ai/mini_cpm/: mod.rs
fal/src/endpoints/fal_ai/minimax/: mod.rs
fal/src/endpoints/fal_ai/minimax_image/: mod.rs
fal/src/endpoints/fal_ai/minimax_music/: mod.rs
fal/src/endpoints/fal_ai/mmaudio_v2/: mod.rs
fal/src/endpoints/fal_ai/mochi_v1/: mod.rs
fal/src/endpoints/fal_ai/moondream_next/: mod.rs
fal/src/endpoints/fal_ai/musetalk/: mod.rs
fal/src/endpoints/fal_ai/nafnet/: mod.rs
fal/src/endpoints/fal_ai/omni_zero/: mod.rs
fal/src/endpoints/fal_ai/omnigen_v1/: mod.rs
fal/src/endpoints/fal_ai/photomaker/: mod.rs
fal/src/endpoints/fal_ai/pixart_sigma/: mod.rs
fal/src/endpoints/fal_ai/playground_v25/: mod.rs
fal/src/endpoints/fal_ai/post_processing/: mod.rs
fal/src/endpoints/fal_ai/pulid/: mod.rs
fal/src/endpoints/fal_ai/realistic_vision/: mod.rs
fal/src/endpoints/fal_ai/recraft_20b/: mod.rs
fal/src/endpoints/fal_ai/recraft_clarity_upscale/: mod.rs
fal/src/endpoints/fal_ai/recraft_creative_upscale/: mod.rs
fal/src/endpoints/fal_ai/recraft_v3/: mod.rs
fal/src/endpoints/fal_ai/retoucher/: mod.rs
fal/src/endpoints/fal_ai/sa2va/: mod.rs
fal/src/endpoints/fal_ai/sadtalker/: mod.rs
fal/src/endpoints/fal_ai/sam2/: mod.rs
fal/src/endpoints/fal_ai/sana/: mod.rs
fal/src/endpoints/fal_ai/sd15_depth_controlnet/: mod.rs
fal/src/endpoints/fashn/: mod.rs
fal/src/endpoints/rundiffusion_fal/: mod.rs
fal/tests/: endpoints.rs  queue.rs  send.rs
generate/: Cargo.toml
(+764 files in other folders)
