[package]
name = "fal"
description = "A Rust crate for the fal.ai API, including generated, typed functions for all public models"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/carlosdp/fal-rs"
license = "MIT OR Apache-2.0"
keywords = ["fal", "ai", "generative-ai"]
authors = ["Carlos Diaz-Padron"]
categories = ["api-bindings"]
readme = "../README.md"

[features]
default = ["image", "endpoints"]
image = ["dep:image", "futures", "base64"]
endpoints = ["smart-default"]

[dependencies]
fal-derive = { version = "0.1", path = "./fal-derive" }
reqwest = { workspace = true, features = ["json", "stream"] }
eventsource-stream = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = "1"

base64 = { version = "0.22", optional = true }
image = { version = "0.25", optional = true }
futures = { version = "0.3", optional = true }
smart-default = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[workspace]
resolver = "2"
members = ["fal-derive", "generate"]

[workspace.dependencies]
reqwest = "0.12"
tokio = "1"
serde = "1"
serde_json = "1"
