[package]
name = "fal"
edition = "2021"
version = "0.1.0"
authors = ["Carlos Diaz-Padron"]
description = "A Rust crate for the fal.ai API, including generated, typed functions for all public models"
keywords = [
    "fal",
    "ai",
    "generative-ai",
]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/carlosdp/fal-rs"

[workspace]
members = [
    "fal-derive",
    "generate",
]
resolver = "2"

[workspace.dependencies]
reqwest = "0.12"
serde = "1"
serde_json = "1"
tokio = "1"

[dependencies]
eventsource-stream = "0.2"
smart-default = "0.7"
thiserror = "1"

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.fal-derive]
version = "0.1"
path = "./fal-derive"

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.image]
version = "0.25"
optional = true

[dependencies.reqwest]
workspace = true
features = [
    "json",
    "stream",
]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.serde_json]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["full"]

[features]
default = ["image"]
endpoints = []
endpoints_fal-ai = []
endpoints_fal-ai_amt-interpolation = []
endpoints_fal-ai_amt-interpolation_frame-interpolation = []
endpoints_fal-ai_animatediff-sparsectrl-lcm = []
endpoints_fal-ai_animatediff-v2v = []
endpoints_fal-ai_animatediff-v2v_turbo = []
endpoints_fal-ai_any-llm = []
endpoints_fal-ai_any-llm_vision = []
endpoints_fal-ai_aura-flow = []
endpoints_fal-ai_aura-sr = []
endpoints_fal-ai_auto-caption = []
endpoints_fal-ai_ben = []
endpoints_fal-ai_ben_v2 = []
endpoints_fal-ai_ben_v2_image = []
endpoints_fal-ai_ben_v2_video = []
endpoints_fal-ai_birefnet = []
endpoints_fal-ai_birefnet_v2 = []
endpoints_fal-ai_bria = []
endpoints_fal-ai_bria_background = []
endpoints_fal-ai_bria_background_remove = []
endpoints_fal-ai_bria_background_replace = []
endpoints_fal-ai_bria_eraser = []
endpoints_fal-ai_bria_expand = []
endpoints_fal-ai_bria_genfill = []
endpoints_fal-ai_bria_product-shot = []
endpoints_fal-ai_bria_reimagine = []
endpoints_fal-ai_bria_text-to-image = []
endpoints_fal-ai_bria_text-to-image_base = []
endpoints_fal-ai_bria_text-to-image_fast = []
endpoints_fal-ai_bria_text-to-image_hd = []
endpoints_fal-ai_bria_upscale = []
endpoints_fal-ai_cat-vton = []
endpoints_fal-ai_ccsr = []
endpoints_fal-ai_clarity-upscaler = []
endpoints_fal-ai_codeformer = []
endpoints_fal-ai_cogvideox-5b = []
endpoints_fal-ai_cogvideox-5b_image-to-video = []
endpoints_fal-ai_cogvideox-5b_video-to-video = []
endpoints_fal-ai_cogview4 = []
endpoints_fal-ai_controlnext = []
endpoints_fal-ai_creative-upscaler = []
endpoints_fal-ai_ddcolor = []
endpoints_fal-ai_diffrhythm = []
endpoints_fal-ai_diffusion-edge = []
endpoints_fal-ai_docres = []
endpoints_fal-ai_docres_dewarp = []
endpoints_fal-ai_drct-super-resolution = []
endpoints_fal-ai_dreamshaper = []
endpoints_fal-ai_dreamshaper_image-to-image = []
endpoints_fal-ai_dreamshaper_inpainting = []
endpoints_fal-ai_dubbing = []
endpoints_fal-ai_dwpose = []
endpoints_fal-ai_elevenlabs = []
endpoints_fal-ai_elevenlabs_audio-isolation = []
endpoints_fal-ai_elevenlabs_sound-effects = []
endpoints_fal-ai_elevenlabs_speech-to-text = []
endpoints_fal-ai_elevenlabs_tts = []
endpoints_fal-ai_elevenlabs_tts_multilingual-v2 = []
endpoints_fal-ai_elevenlabs_tts_turbo-v2-5 = []
endpoints_fal-ai_era-3d = []
endpoints_fal-ai_esrgan = []
endpoints_fal-ai_evf-sam = []
endpoints_fal-ai_eye-correct = []
endpoints_fal-ai_f5-tts = []
endpoints_fal-ai_face-to-sticker = []
endpoints_fal-ai_fast-animatediff = []
endpoints_fal-ai_fast-animatediff_text-to-video = []
endpoints_fal-ai_fast-animatediff_turbo = []
endpoints_fal-ai_fast-animatediff_turbo_text-to-video = []
endpoints_fal-ai_fast-animatediff_turbo_video-to-video = []
endpoints_fal-ai_fast-animatediff_video-to-video = []
endpoints_fal-ai_fast-fooocus-sdxl = []
endpoints_fal-ai_fast-fooocus-sdxl_image-to-image = []
endpoints_fal-ai_fast-fooocus-sdxl_inpainting = []
endpoints_fal-ai_fast-lcm-diffusion = []
endpoints_fal-ai_fast-lcm-diffusion_image-to-image = []
endpoints_fal-ai_fast-lcm-diffusion_inpainting = []
endpoints_fal-ai_fast-lightning-sdxl = []
endpoints_fal-ai_fast-lightning-sdxl_image-to-image = []
endpoints_fal-ai_fast-lightning-sdxl_inpainting = []
endpoints_fal-ai_fast-sdxl = []
endpoints_fal-ai_fast-sdxl-controlnet-canny = []
endpoints_fal-ai_fast-sdxl-controlnet-canny_image-to-image = []
endpoints_fal-ai_fast-sdxl-controlnet-canny_inpainting = []
endpoints_fal-ai_fast-sdxl_image-to-image = []
endpoints_fal-ai_fast-sdxl_inpainting = []
endpoints_fal-ai_fast-svd = []
endpoints_fal-ai_fast-svd-lcm = []
endpoints_fal-ai_fast-svd-lcm_text-to-video = []
endpoints_fal-ai_fast-svd_text-to-video = []
endpoints_fal-ai_fast-turbo-diffusion = []
endpoints_fal-ai_fast-turbo-diffusion_image-to-image = []
endpoints_fal-ai_fast-turbo-diffusion_inpainting = []
endpoints_fal-ai_ffmpeg-api = []
endpoints_fal-ai_ffmpeg-api_compose = []
endpoints_fal-ai_ffmpeg-api_metadata = []
endpoints_fal-ai_ffmpeg-api_waveform = []
endpoints_fal-ai_florence-2-large = []
endpoints_fal-ai_florence-2-large_caption = []
endpoints_fal-ai_florence-2-large_caption-to-phrase-grounding = []
endpoints_fal-ai_florence-2-large_dense-region-caption = []
endpoints_fal-ai_florence-2-large_detailed-caption = []
endpoints_fal-ai_florence-2-large_more-detailed-caption = []
endpoints_fal-ai_florence-2-large_object-detection = []
endpoints_fal-ai_florence-2-large_ocr = []
endpoints_fal-ai_florence-2-large_ocr-with-region = []
endpoints_fal-ai_florence-2-large_open-vocabulary-detection = []
endpoints_fal-ai_florence-2-large_referring-expression-segmentation = []
endpoints_fal-ai_florence-2-large_region-proposal = []
endpoints_fal-ai_florence-2-large_region-to-category = []
endpoints_fal-ai_florence-2-large_region-to-description = []
endpoints_fal-ai_florence-2-large_region-to-segmentation = []
endpoints_fal-ai_flowedit = []
endpoints_fal-ai_flux = []
endpoints_fal-ai_flux-control-lora-canny = []
endpoints_fal-ai_flux-control-lora-canny_image-to-image = []
endpoints_fal-ai_flux-control-lora-depth = []
endpoints_fal-ai_flux-control-lora-depth_image-to-image = []
endpoints_fal-ai_flux-differential-diffusion = []
endpoints_fal-ai_flux-general = []
endpoints_fal-ai_flux-general_differential-diffusion = []
endpoints_fal-ai_flux-general_image-to-image = []
endpoints_fal-ai_flux-general_inpainting = []
endpoints_fal-ai_flux-general_rf-inversion = []
endpoints_fal-ai_flux-lora = []
endpoints_fal-ai_flux-lora-canny = []
endpoints_fal-ai_flux-lora-depth = []
endpoints_fal-ai_flux-lora-fast-training = []
endpoints_fal-ai_flux-lora-fill = []
endpoints_fal-ai_flux-lora-portrait-trainer = []
endpoints_fal-ai_flux-lora_image-to-image = []
endpoints_fal-ai_flux-lora_inpainting = []
endpoints_fal-ai_flux-pro = []
endpoints_fal-ai_flux-pro-trainer = []
endpoints_fal-ai_flux-pro_finetuned = []
endpoints_fal-ai_flux-pro_new = []
endpoints_fal-ai_flux-pro_v1 = []
endpoints_fal-ai_flux-pro_v1-1 = []
endpoints_fal-ai_flux-pro_v1-1-ultra = []
endpoints_fal-ai_flux-pro_v1-1-ultra-finetuned = []
endpoints_fal-ai_flux-pro_v1-1-ultra_redux = []
endpoints_fal-ai_flux-pro_v1-1_redux = []
endpoints_fal-ai_flux-pro_v1_canny = []
endpoints_fal-ai_flux-pro_v1_canny-finetuned = []
endpoints_fal-ai_flux-pro_v1_depth = []
endpoints_fal-ai_flux-pro_v1_depth-finetuned = []
endpoints_fal-ai_flux-pro_v1_fill = []
endpoints_fal-ai_flux-pro_v1_fill-finetuned = []
endpoints_fal-ai_flux-pro_v1_outpaint = []
endpoints_fal-ai_flux-pro_v1_redux = []
endpoints_fal-ai_flux-pulid = []
endpoints_fal-ai_flux-subject = []
endpoints_fal-ai_flux_dev = []
endpoints_fal-ai_flux_dev_image-to-image = []
endpoints_fal-ai_flux_dev_redux = []
endpoints_fal-ai_flux_schnell = []
endpoints_fal-ai_flux_schnell_redux = []
endpoints_fal-ai_fooocus = []
endpoints_fal-ai_fooocus_image-prompt = []
endpoints_fal-ai_fooocus_inpaint = []
endpoints_fal-ai_fooocus_upscale-or-vary = []
endpoints_fal-ai_got-ocr = []
endpoints_fal-ai_got-ocr_v2 = []
endpoints_fal-ai_hunyuan-video = []
endpoints_fal-ai_hunyuan-video-image-to-video = []
endpoints_fal-ai_hunyuan-video-img2vid-lora = []
endpoints_fal-ai_hunyuan-video-lora = []
endpoints_fal-ai_hunyuan-video-lora-training = []
endpoints_fal-ai_hunyuan-video_video-to-video = []
endpoints_fal-ai_hyper-sdxl = []
endpoints_fal-ai_hyper-sdxl_image-to-image = []
endpoints_fal-ai_hyper-sdxl_inpainting = []
endpoints_fal-ai_hyper3d = []
endpoints_fal-ai_hyper3d_rodin = []
endpoints_fal-ai_iclight-v2 = []
endpoints_fal-ai_ideogram = []
endpoints_fal-ai_ideogram_upscale = []
endpoints_fal-ai_ideogram_v2 = []
endpoints_fal-ai_ideogram_v2_edit = []
endpoints_fal-ai_ideogram_v2_remix = []
endpoints_fal-ai_ideogram_v2_turbo = []
endpoints_fal-ai_ideogram_v2_turbo_edit = []
endpoints_fal-ai_ideogram_v2_turbo_remix = []
endpoints_fal-ai_ideogram_v2a = []
endpoints_fal-ai_ideogram_v2a_remix = []
endpoints_fal-ai_ideogram_v2a_turbo = []
endpoints_fal-ai_ideogram_v2a_turbo_remix = []
endpoints_fal-ai_illusion-diffusion = []
endpoints_fal-ai_image-preprocessors = []
endpoints_fal-ai_image-preprocessors_canny = []
endpoints_fal-ai_image-preprocessors_depth-anything = []
endpoints_fal-ai_image-preprocessors_depth-anything_v2 = []
endpoints_fal-ai_image-preprocessors_hed = []
endpoints_fal-ai_image-preprocessors_lineart = []
endpoints_fal-ai_image-preprocessors_midas = []
endpoints_fal-ai_image-preprocessors_mlsd = []
endpoints_fal-ai_image-preprocessors_pidi = []
endpoints_fal-ai_image-preprocessors_sam = []
endpoints_fal-ai_image-preprocessors_scribble = []
endpoints_fal-ai_image-preprocessors_teed = []
endpoints_fal-ai_image-preprocessors_zoe = []
endpoints_fal-ai_imagen3 = []
endpoints_fal-ai_imagen3_fast = []
endpoints_fal-ai_imagen3_subject-reference = []
endpoints_fal-ai_imageutils = []
endpoints_fal-ai_imageutils_depth = []
endpoints_fal-ai_imageutils_esrgan = []
endpoints_fal-ai_imageutils_marigold-depth = []
endpoints_fal-ai_imageutils_nsfw = []
endpoints_fal-ai_imageutils_rembg = []
endpoints_fal-ai_imageutils_sam = []
endpoints_fal-ai_inpaint = []
endpoints_fal-ai_ip-adapter-face-id = []
endpoints_fal-ai_janus = []
endpoints_fal-ai_kling = []
endpoints_fal-ai_kling-video = []
endpoints_fal-ai_kling-video_v1 = []
endpoints_fal-ai_kling-video_v1-5 = []
endpoints_fal-ai_kling-video_v1-5_pro = []
endpoints_fal-ai_kling-video_v1-5_pro_effects = []
endpoints_fal-ai_kling-video_v1-5_pro_image-to-video = []
endpoints_fal-ai_kling-video_v1-5_pro_text-to-video = []
endpoints_fal-ai_kling-video_v1-5_standard = []
endpoints_fal-ai_kling-video_v1-5_standard_effects = []
endpoints_fal-ai_kling-video_v1-6 = []
endpoints_fal-ai_kling-video_v1-6_pro = []
endpoints_fal-ai_kling-video_v1-6_pro_effects = []
endpoints_fal-ai_kling-video_v1-6_pro_image-to-video = []
endpoints_fal-ai_kling-video_v1-6_pro_text-to-video = []
endpoints_fal-ai_kling-video_v1-6_standard = []
endpoints_fal-ai_kling-video_v1-6_standard_effects = []
endpoints_fal-ai_kling-video_v1-6_standard_image-to-video = []
endpoints_fal-ai_kling-video_v1-6_standard_text-to-video = []
endpoints_fal-ai_kling-video_v1_pro = []
endpoints_fal-ai_kling-video_v1_pro_effects = []
endpoints_fal-ai_kling-video_v1_pro_image-to-video = []
endpoints_fal-ai_kling-video_v1_pro_text-to-video = []
endpoints_fal-ai_kling-video_v1_standard = []
endpoints_fal-ai_kling-video_v1_standard_effects = []
endpoints_fal-ai_kling-video_v1_standard_image-to-video = []
endpoints_fal-ai_kling-video_v1_standard_text-to-video = []
endpoints_fal-ai_kling_v1-5 = []
endpoints_fal-ai_kling_v1-5_kolors-virtual-try-on = []
endpoints_fal-ai_kokoro = []
endpoints_fal-ai_kokoro_american-english = []
endpoints_fal-ai_kokoro_brazilian-portuguese = []
endpoints_fal-ai_kokoro_british-english = []
endpoints_fal-ai_kokoro_french = []
endpoints_fal-ai_kokoro_hindi = []
endpoints_fal-ai_kokoro_italian = []
endpoints_fal-ai_kokoro_japanese = []
endpoints_fal-ai_kokoro_mandarin-chinese = []
endpoints_fal-ai_kokoro_spanish = []
endpoints_fal-ai_kolors = []
endpoints_fal-ai_kolors_image-to-image = []
endpoints_fal-ai_latentsync = []
endpoints_fal-ai_layer-diffusion = []
endpoints_fal-ai_lcm = []
endpoints_fal-ai_lcm-sd15-i2i = []
endpoints_fal-ai_leffa = []
endpoints_fal-ai_leffa_pose-transfer = []
endpoints_fal-ai_leffa_virtual-tryon = []
endpoints_fal-ai_lightning-models = []
endpoints_fal-ai_lightning-models_image-to-image = []
endpoints_fal-ai_lightning-models_inpainting = []
endpoints_fal-ai_live-portrait = []
endpoints_fal-ai_live-portrait_image = []
endpoints_fal-ai_live-portrait_video = []
endpoints_fal-ai_llava-next = []
endpoints_fal-ai_llavav15-13b = []
endpoints_fal-ai_lora = []
endpoints_fal-ai_lora_image-to-image = []
endpoints_fal-ai_lora_inpaint = []
endpoints_fal-ai_ltx-video = []
endpoints_fal-ai_ltx-video-v095 = []
endpoints_fal-ai_ltx-video-v095_extend = []
endpoints_fal-ai_ltx-video-v095_image-to-video = []
endpoints_fal-ai_ltx-video-v095_multiconditioning = []
endpoints_fal-ai_ltx-video_image-to-video = []
endpoints_fal-ai_luma-dream-machine = []
endpoints_fal-ai_luma-dream-machine_image-to-video = []
endpoints_fal-ai_luma-dream-machine_ray-2 = []
endpoints_fal-ai_luma-dream-machine_ray-2_image-to-video = []
endpoints_fal-ai_luma-photon = []
endpoints_fal-ai_luma-photon_flash = []
endpoints_fal-ai_lumina-image = []
endpoints_fal-ai_lumina-image_v2 = []
endpoints_fal-ai_mini-cpm = []
endpoints_fal-ai_mini-cpm_video = []
endpoints_fal-ai_minimax = []
endpoints_fal-ai_minimax-image = []
endpoints_fal-ai_minimax-music = []
endpoints_fal-ai_minimax_image-to-video = []
endpoints_fal-ai_minimax_video-01 = []
endpoints_fal-ai_minimax_video-01-director = []
endpoints_fal-ai_minimax_video-01-director_image-to-video = []
endpoints_fal-ai_minimax_video-01-live = []
endpoints_fal-ai_minimax_video-01-live_image-to-video = []
endpoints_fal-ai_minimax_video-01-subject-reference = []
endpoints_fal-ai_minimax_video-01_image-to-video = []
endpoints_fal-ai_mmaudio-v2 = []
endpoints_fal-ai_mmaudio-v2_text-to-audio = []
endpoints_fal-ai_mochi-v1 = []
endpoints_fal-ai_moondream = []
endpoints_fal-ai_moondream-next = []
endpoints_fal-ai_moondream-next_batch = []
endpoints_fal-ai_moondream-next_detection = []
endpoints_fal-ai_moondream_batched = []
endpoints_fal-ai_musetalk = []
endpoints_fal-ai_nafnet = []
endpoints_fal-ai_nafnet_deblur = []
endpoints_fal-ai_nafnet_denoise = []
endpoints_fal-ai_omni-zero = []
endpoints_fal-ai_omnigen-v1 = []
endpoints_fal-ai_photomaker = []
endpoints_fal-ai_pixart-sigma = []
endpoints_fal-ai_pixverse = []
endpoints_fal-ai_pixverse_v3-5 = []
endpoints_fal-ai_pixverse_v3-5_image-to-video = []
endpoints_fal-ai_pixverse_v3-5_image-to-video_fast = []
endpoints_fal-ai_pixverse_v3-5_text-to-video = []
endpoints_fal-ai_pixverse_v3-5_text-to-video_fast = []
endpoints_fal-ai_playai = []
endpoints_fal-ai_playai_create-voice = []
endpoints_fal-ai_playai_train = []
endpoints_fal-ai_playai_train_dialog = []
endpoints_fal-ai_playground-v25 = []
endpoints_fal-ai_playground-v25_image-to-image = []
endpoints_fal-ai_playground-v25_inpainting = []
endpoints_fal-ai_post-processing = []
endpoints_fal-ai_pulid = []
endpoints_fal-ai_realistic-vision = []
endpoints_fal-ai_realistic-vision_image-to-image = []
endpoints_fal-ai_realistic-vision_inpainting = []
endpoints_fal-ai_recraft-20b = []
endpoints_fal-ai_recraft-clarity-upscale = []
endpoints_fal-ai_recraft-creative-upscale = []
endpoints_fal-ai_recraft-v3 = []
endpoints_fal-ai_recraft-v3_create-style = []
endpoints_fal-ai_retoucher = []
endpoints_fal-ai_sa2va = []
endpoints_fal-ai_sa2va_v4b = []
endpoints_fal-ai_sa2va_v4b_image = []
endpoints_fal-ai_sa2va_v4b_video = []
endpoints_fal-ai_sa2va_v8b = []
endpoints_fal-ai_sa2va_v8b_image = []
endpoints_fal-ai_sa2va_v8b_video = []
endpoints_fal-ai_sadtalker = []
endpoints_fal-ai_sadtalker_reference = []
endpoints_fal-ai_sam2 = []
endpoints_fal-ai_sam2_auto-segment = []
endpoints_fal-ai_sam2_image = []
endpoints_fal-ai_sam2_image-rle = []
endpoints_fal-ai_sana = []
endpoints_fal-ai_sd15-depth-controlnet = []
endpoints_fal-ai_sd15-depth-controlnet_image-to-image = []
endpoints_fal-ai_sd15-depth-controlnet_inpainting = []
endpoints_fal-ai_sdxl-controlnet-union = []
endpoints_fal-ai_sdxl-controlnet-union_image-to-image = []
endpoints_fal-ai_sdxl-controlnet-union_inpainting = []
endpoints_fal-ai_skyreels-i2v = []
endpoints_fal-ai_stable-audio = []
endpoints_fal-ai_stable-cascade = []
endpoints_fal-ai_stable-cascade_sote-diffusion = []
endpoints_fal-ai_stable-diffusion-v15 = []
endpoints_fal-ai_stable-diffusion-v15_image-to-image = []
endpoints_fal-ai_stable-diffusion-v15_inpainting = []
endpoints_fal-ai_stable-diffusion-v3-medium = []
endpoints_fal-ai_stable-diffusion-v3-medium_image-to-image = []
endpoints_fal-ai_stable-diffusion-v35-large = []
endpoints_fal-ai_stable-diffusion-v35-large_image-to-image = []
endpoints_fal-ai_stable-diffusion-v35-large_inpaint = []
endpoints_fal-ai_stable-diffusion-v35-large_turbo = []
endpoints_fal-ai_stable-diffusion-v35-large_turbo_image-to-image = []
endpoints_fal-ai_stable-diffusion-v35-large_turbo_inpaint = []
endpoints_fal-ai_stable-diffusion-v35-medium = []
endpoints_fal-ai_stable-video = []
endpoints_fal-ai_stable-video_text-to-video = []
endpoints_fal-ai_stepfun-video = []
endpoints_fal-ai_swin2sr = []
endpoints_fal-ai_switti = []
endpoints_fal-ai_switti_v512 = []
endpoints_fal-ai_sync-lipsync = []
endpoints_fal-ai_t2v-turbo = []
endpoints_fal-ai_transpixar = []
endpoints_fal-ai_trellis = []
endpoints_fal-ai_triposr = []
endpoints_fal-ai_triposr_remeshing = []
endpoints_fal-ai_veo2 = []
endpoints_fal-ai_veo2_image-to-video = []
endpoints_fal-ai_video-prompt-generator = []
endpoints_fal-ai_video-upscaler = []
endpoints_fal-ai_wan = []
endpoints_fal-ai_wan-i2v = []
endpoints_fal-ai_wan-t2v = []
endpoints_fal-ai_wan_v2-1 = []
endpoints_fal-ai_wan_v2-1_v1-3b = []
endpoints_fal-ai_wan_v2-1_v1-3b_text-to-video = []
endpoints_fal-ai_whisper = []
endpoints_fal-ai_wizper = []
endpoints_fal-ai_workflowutils = []
endpoints_fal-ai_workflowutils_blur-mask = []
endpoints_fal-ai_workflowutils_canny = []
endpoints_fal-ai_workflowutils_compare-text = []
endpoints_fal-ai_workflowutils_composite-image = []
endpoints_fal-ai_workflowutils_grow-mask = []
endpoints_fal-ai_workflowutils_image-size = []
endpoints_fal-ai_workflowutils_insert-text = []
endpoints_fal-ai_workflowutils_insightface = []
endpoints_fal-ai_workflowutils_invert-mask = []
endpoints_fal-ai_workflowutils_regex-replace = []
endpoints_fal-ai_workflowutils_resize-image = []
endpoints_fal-ai_workflowutils_resize-to-max-pixels = []
endpoints_fal-ai_workflowutils_rgba-to-rgb = []
endpoints_fal-ai_workflowutils_shrink-mask = []
endpoints_fal-ai_workflowutils_teed = []
endpoints_fal-ai_workflowutils_transparent-image-to-mask = []
endpoints_fal-ai_yue = []
endpoints_fal-ai_zonos = []
endpoints_fashn = []
endpoints_fashn_tryon = []
endpoints_rundiffusion-fal = []
endpoints_rundiffusion-fal_juggernaut-flux = []
endpoints_rundiffusion-fal_juggernaut-flux-lora = []
endpoints_rundiffusion-fal_juggernaut-flux-lora_image-to-image = []
endpoints_rundiffusion-fal_juggernaut-flux-lora_inpainting = []
endpoints_rundiffusion-fal_juggernaut-flux_base = []
endpoints_rundiffusion-fal_juggernaut-flux_base_image-to-image = []
endpoints_rundiffusion-fal_juggernaut-flux_base_redux = []
endpoints_rundiffusion-fal_juggernaut-flux_lightning = []
endpoints_rundiffusion-fal_juggernaut-flux_lightning_redux = []
endpoints_rundiffusion-fal_juggernaut-flux_pro = []
endpoints_rundiffusion-fal_juggernaut-flux_pro_image-to-image = []
endpoints_rundiffusion-fal_juggernaut-flux_pro_redux = []
endpoints_rundiffusion-fal_rundiffusion-photo-flux = []
endpoints_rundiffusion-fal_rundiffusion-photo-flux_image-to-image = []
endpoints_rundiffusion-fal_rundiffusion-photo-flux_inpainting = []
endpoints_rundiffusion-fal_rundiffusion-photo-flux_juggernaut = []
endpoints_rundiffusion-fal_rundiffusion-photo-flux_juggernaut_image-to-image = []
endpoints_rundiffusion-fal_rundiffusion-photo-flux_juggernaut_inpainting = []
image = [
    "dep:image",
    "futures",
    "base64",
]

[[test]]
path = "tests/endpoints.rs"
name = "endpoints"
edition = "2021"
required-features = ["endpoints"]

[[test]]
path = "tests/image.rs"
name = "image"
edition = "2021"
required-features = []

[[test]]
path = "tests/queue.rs"
name = "queue"
edition = "2021"
required-features = []

[[test]]
path = "tests/send.rs"
name = "send"
edition = "2021"
required-features = []

[lib]
path = "src/lib.rs"
name = "fal"
edition = "2021"
required-features = []
crate-type = ["lib"]
