[package]
name = "fal"
version = "0.1.0"
edition = "2021"

[features]
default = ["image"]
image = ["dep:image", "futures", "base64"]

[dependencies]
fal-derive = { path = "../fal-derive" }
base64 = { version = "0.22", optional = true }
image = { version = "0.25", optional = true }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }