[package]
name = "fal"
version = "0.1.0"
edition = "2021"

[features]
default = ["image"]
image = ["dep:image", "futures", "base64"]

[dependencies]
fal-derive = { path = "../fal-derive" }
base64 = { version = "0.22", optional = true }
image = { version = "0.25", optional = true }
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
thiserror = "1"
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }