[package]
name = "fal"
version = "0.1.0"
edition = "2021"

[features]
default = ["image", "endpoints"]
image = ["dep:image", "futures", "base64"]
endpoints = []

[dependencies]
fal-derive = { path = "../fal-derive" }
reqwest = { workspace = true, features = ["json", "stream"] }
eventsource-stream = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = "1"

base64 = { version = "0.22", optional = true }
image = { version = "0.25", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }